--- a/mvc2/front/css/style.css
+++ b/mvc2/front/css/style.css
@@ -118,6 +118,12 @@ p {
     font-family: Open sans;
     color: #fff;
 }
+.navbar .nav-item a img{
+    border-radius: 50%;
+    height:35px;
+    width: 35px;
+    margin-top: -9px;
+}
 .navbar .nav-item a:hover{
     color: #6255a5;
     -webkit-transition: all 0.3s linear;
@@ -471,6 +477,9 @@ div.form-center label a.forgot-ps{
     font-family: "Open Sans",sans-serif;
     font-weight: 400;
     line-height: 20px;
+}
+.signup-footer a {
+    color: #6255a5;
 }
 
 .form-center .login-footer a{
