modifiy script and navbar of some pages

--- a/mvc3/admin/css/style.css
+++ b/mvc3/admin/css/style.css
@@ -45,6 +45,9 @@ p {
     margin-top: -35px;
     margin-left: -35px;
 }
+.active{
+    border-bottom: 2.5px solid #6255a5;
+}
 
 /* ==========================================
               login
