--- a/mvc3/front/css/style.css
+++ b/mvc3/front/css/style.css
@@ -2271,3 +2271,56 @@ ul#searchsociallist li a {
 	background-color: #dd4b39;
 	border-color: transparent;
 }
+
+
+
+table.dataTable thead th,
+table.dataTable thead td {
+    padding: 10px 18px;
+    border-bottom: none !important;
+}
+
+table.dataTable.no-footer {
+    border-bottom: 1px solid #dee2e6 !important;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+    background: none !important;
+    background-color: #6255a5 !important;
+    border-radius: 50% !important;
+    color: white !important;
+    font-family: "open sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.dataTables_wrapper .dataTables_paginate {
+    display: table !important;
+    width: 100% !important;
+    text-align: center;
+    margin-top: 10px !important;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    background: none;
+    background-color: white;
+    color: #333 !important;    
+    border-radius: 50%;
+    border: 1px solid white;
+    font-family: "open sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    outline: none;
+}
+
+.dataTables_wrapper .dataTables_info {
+    display: none;
+}
+        
+table.dataTable thead .sorting {
+    background-image: none;
+}
+
